--- a/package.json
+++ b/package.json
@@ -115,11 +115,10 @@
     "@ant-design/icons": "^5.6.1",
     "@ant-design/react-slick": "~1.1.2",
     "@babel/runtime": "^7.26.0",
+    "@erick-forge/tour-forge": "^2.2.3",
     "@rc-component/color-picker": "~2.0.1",
     "@rc-component/mutate-observer": "^1.1.0",
     "@rc-component/qrcode": "~1.0.0",
-    "@rc-component/tour": "~1.15.1",
-    "@rc-component/tour-forge": "file:../tour/rc-component-tour-forge-2.2.0.tgz",
     "@rc-component/trigger": "^2.2.6",
     "classnames": "^2.5.1",
     "copy-to-clipboard": "^3.3.3",
