--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "antd",
+  "name": "antd-forge",
   "version": "5.24.1",
   "description": "An enterprise-class UI design language and React components implementation",
   "author": "AntD - Forge",
